// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyPage component renders actions with descriptions 1`] = `
<EmptyPrompt
  actions={
    <EuiFlexGroup
      justifyContent="center"
    >
      <EuiFlexItem
        grow={false}
        style={
          Object {
            "maxWidth": 283,
          }
        }
      >
        <EuiCard
          description="My Description"
          footer={
            <EuiButton
              color="primary"
              data-test-subj="empty-page-actions-action"
              fill={true}
              href="my/url/from/nowwhere"
              size="m"
            >
              Do Something
            </EuiButton>
          }
          title={false}
        />
      </EuiFlexItem>
    </EuiFlexGroup>
  }
  iconType="logoSecurity"
  title={
    <EuiText>
      <h2>
        My Super Title
      </h2>
    </EuiText>
  }
/>
`;

exports[`EmptyPage component renders actions without descriptions 1`] = `
<EmptyPrompt
  actions={
    <EuiFlexGroup
      justifyContent="center"
    >
      <EuiFlexItem
        grow={false}
        style={
          Object {
            "maxWidth": 283,
          }
        }
      >
        <EuiButton
          color="primary"
          data-test-subj="empty-page-actions-action"
          href="my/url/from/nowwhere"
          size="m"
        >
          Do Something
        </EuiButton>
      </EuiFlexItem>
    </EuiFlexGroup>
  }
  iconType="logoSecurity"
  title={
    <EuiText>
      <h2>
        My Super Title
      </h2>
    </EuiText>
  }
/>
`;
